tests/lean/1705.lean.expected.out
1705.lean:1:13-1:16: error: function expected at
  T
term has type
  ?m
1705.lean:1:18-1:19: error: unexpected identifier; expected command
